[package]
name = "eas"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }
http = "1"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
rust-embed = "8.3"
