[package]
name = "eas"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
fltk = "1"
http = "1"
rust-embed = "8.3"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
xmltree = "0.10"
